--- a/doc/presentation.tex
+++ b/doc/presentation.tex
@@ -12,11 +12,10 @@
 \setminted{bgcolor=main!10!background}
 \usemintedstyle{manni}
 
-\title{Introduction to \texttt{CMake}}
-\author{\texorpdfstring{\vspace{2\baselineskip}}{}
-        Pasquale Africa}
-\institute{}
-\date{}
+\title{Introduction to CMake}
+\author{Pasquale Africa}
+\institute{Politecnico di Milano}
+\date{2021-05-21}
 \titlegraphic{}
 
 \begin{document}
@@ -34,7 +33,7 @@
         \item configure and install third-party software on your system.
     \end{enumerate}
     \vfill
-    \textbf{To configure} means to
+    \textbf{Configure} means
     \begin{itemize}
         \item meet dependencies
         \item build
@@ -47,22 +46,22 @@
     \item \textbf{CMake}\footnote{\url{https://cmake.org/}}
     \begin{itemize}
     \item[\pro] Easy to learn, great support for multiple IDEs, cross-platform
-    \item[\con] Sometimes more complicated than necessary. Does not perform compilation test for met dependencies.
+    \item[\con] Does not perform automatic compilation test for met dependencies.
     \end{itemize}
     \item \textbf{GNU Autotools}\footnote{\url{https://www.gnu.org/software/automake/manual/}}
     \begin{itemize}
     \item[\pro] Excellent support for legacy Unix platforms, large selection of existing modules.
     \item[\con] Slow, hard to use correctly, painful to debug, poor support for non-Unix platforms.
     \end{itemize}
-    \item \textbf{Meson}\footnote{\url{https://mesonbuild.com/}}, \textbf{Bazel}\footnote{\url{https://bazel.build/}}, \textbf{SCons}\footnote{\url{https://scons.org/}} \dots
+    \item \textbf{Meson}\footnote{\url{https://mesonbuild.com/}}, \textbf{Bazel}\footnote{\url{https://bazel.build/}}, \textbf{SCons}\footnote{\url{https://scons.org/}}, \dots
     \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]{Let's try}
-Unload the \texttt{mk} module system (\texttt{module purge}), then compile and install.\\
+Unload the \texttt{mk} module system (\texttt{module purge}), install dependencies then compile and install.\\
 \textbf{Doxygen} {\small (\url{https://github.com/doxygen/doxygen})}
 \begin{minted}{bash}
-cd /path/to/doxygen
+cd /path/to/doxygen/src/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=/opt/doxygen ../
 make -j<N>
@@ -70,7 +69,7 @@ make -j<N>
 \end{minted}
 \textbf{GNU Scientific Library} {\small (\url{https://www.gnu.org/software/gsl/})}
 \begin{minted}{bash}
-cd /path/to/gsl
+cd /path/to/gsl/src/
 ./configure --prefix=/opt/gsl --enable-shared --disable-static
 make -j<N>
 (sudo) make install
@@ -93,6 +92,7 @@ Who else is using CMake?
     \item Armadillo, CGAL, LAPACK, Trilinos (linear algebra and algorithms)
     \item deal.II, Gmsh (FEM analysis)
     \item KDE, Qt, ReactOS (user interfaces and operating systems)
+    \item \dots
 \end{itemize}
 \end{frame}
 
@@ -113,16 +113,16 @@ Who else is using CMake?
 \end{itemize}
 \end{frame}
 
-\section{CMake Basics}
+\section{CMake basics}
 \begin{frame}[fragile]{CMake 101}
-The root of a project using CMake needs to contain a \textbf{\texttt{CMakeLists.txt}} file.
+The root of a project using CMake must contain a \textbf{\texttt{CMakeLists.txt}} file.
 
 \begin{minted}{cmake}
 cmake_minimum_required(VERSION 3.12)
 
 # This is a comment.
 project(MyProject VERSION 1.0
-DESCRIPTION "A very nice project"
+                  DESCRIPTION "A very nice project"
                   LANGUAGES CXX)
 \end{minted}
 Please use a CMake version more recent than your compiler (at least \(\geq 3.0\)).
@@ -130,22 +130,28 @@ Please use a CMake version more recent than your compiler (at least \(\geq 3.0\)
 Command names are \textbf{case-insensitive}.
 \end{frame}
 
-\begin{frame}[fragile]{Introduction to the basics}
-Configure and compile with:
+\begin{frame}[fragile]{CMake 101}
+Configure:
 \begin{minted}{bash}
-mkdir build && cd build
-cmake SOURCE_DIR
+cmake -S /path/to/src/ -B build [options...]
+# Or:
+# mkdir build && cd build
+# cmake /path/to/src/ [options...]
+\end{minted}
+Compile:
+\begin{minted}{bash}
+cd /path/to/build/
 make -j<N>
 \end{minted}
 To print a list of variable values:
 \begin{minted}{bash}
 cd build
-cmake SOURCE_DIR -L
+cmake /path/to/src/ -L
 \end{minted}
 \end{frame}
 
 \begin{frame}[fragile]{Targets}
-CMake is all about targets and properties. An executable is a target, a library is a target. Your application is built as a collection of targets depending on and using each other.
+CMake is all about targets and properties. An executable is a target, a library is a target. Your application is built as a collection of targets depending on each other.
 
 \begin{minted}{cmake}
 # Header files are optional.
@@ -157,7 +163,7 @@ add_library(my_lib STATIC my_class.cpp my_class.h)
 \end{frame}
 
 \begin{frame}[fragile]{Target properties}
-Target can be associated properties:
+Target can be associated various properties\footnote{\url{https://cmake.org/cmake/help/latest/manual/cmake-properties.7.html}}:
 \begin{minted}{cmake}
 add_library(my_lib STATIC my_class.cpp my_class.h)
 target_include_directories(my_lib PUBLIC include_dir)
@@ -167,22 +173,23 @@ target_link_libraries(my_lib PUBLIC another_lib)
 
 add_executable(my_exec my_main.cpp my_header.h)
 target_link_libraries(my_exec my_lib)
-target_compile_features(my_exec cxx_std_11)
+target_compile_features(my_exec cxx_std_20)
 # Last command is equivalent to
-# set_target_properties(my_exec PROPERTIES CXX_STANDARD 11)
+# set_target_properties(my_exec PROPERTIES CXX_STANDARD 20)
 \end{minted}
 \end{frame}
 
-\section{Communicate with the outside world}
+\section{Interact with the outside world}
 \begin{frame}[fragile]{Local variables}
 \begin{minted}{cmake}
 set(LIB_NAME "my_lib")
 
 # List items are space- or semicolon-separated.
-set(INCLUDE_LIST "one;two")
+set(SRCS "my_class.cpp;my_main.cpp")
+set(INCLUDE_DIRS "include_one;include_two")
 
-add_library(${LIB_NAME} STATIC my_class.cpp my_class.h)
-target_include_directories(${LIB_NAME} PUBLIC ${INCLUDE_LIST})
+add_library(${LIB_NAME} STATIC ${SRCS} my_class.h)
+target_include_directories(${LIB_NAME} PUBLIC ${INCLUDE_DIRS})
 
 add_executable(my_exec my_main.cpp my_header.h)
 target_link_libraries(my_exec ${LIB_NAME})
@@ -190,7 +197,7 @@ target_link_libraries(my_exec ${LIB_NAME})
 \end{frame}
 
 \begin{frame}[fragile]{Cache variables}
-Cache variables are used to communicate with the command line:
+Cache variables are used to interact with the command line:
 \begin{minted}{cmake}
 # "VALUE" is just the default value.
 set(MY_CACHE_VARIABLE "VALUE" CACHE STRING "Description")
@@ -201,7 +208,9 @@ option(MY_OPTION "This is settable from the command line" OFF)
 
 Then:
 \begin{minted}{bash}
-cmake SOURCE_DIR -DMY_CACHE_VARIABLE="CUSTOM_VALUE"
+cmake /path/to/src/ \
+  -DMY_CACHE_VARIABLE="SOME_CUSTOM_VALUE" \
+  -DMY_OPTION=OFF
 \end{minted}
 \end{frame}
 
@@ -292,7 +301,8 @@ endif()
 \begin{minted}{c++}
 void print_version() {
   std::cout << "Version number: " << @MY_PROJECT_VERSION@
-            << std::endl; }
+            << std::endl;
+}
 \end{minted}
 \texttt{CMakeLists.txt}:
 \begin{minted}{c++}
@@ -300,12 +310,12 @@ set(MY_PROJECT_VERSION 1.2.0)
 
 configure_file(
   "${CMAKE_CURRENT_SOURCE_DIR}/print_version.hpp.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/print_version.hpp"
-)
+  "${CMAKE_CURRENT_BINARY_DIR}/print_version.hpp")
 \end{minted}
+See also: \texttt{\#cmakedefine}.
 \end{frame}
 
-\begin{frame}[fragile]{Debug}
+\begin{frame}[fragile]{Print messages and debug}
 Content of variables is printed with
 \begin{minted}{cmake}
 message("MY_VAR is: ${MY_VAR}")
@@ -318,6 +328,7 @@ message(FATAL_ERROR "MY_VAR has wrong value: ${MY_VAR}")
 \vfill
 Commands being executed are printed with
 \begin{minted}{bash}
+cmake /path/to/src/ -B build --trace-source=CMakeLists.txt
 make VERBOSE=1
 \end{minted}
 \end{frame}
@@ -330,12 +341,12 @@ CMake looks for \textbf{module files} \texttt{FindPackage.cmake} in the director
 set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH} /path/to/module/")
 
 # Specify "REQUIRED" if library is mandatory.
-find_package(Boost 1.50 COMPONENTS graph)
+find_package(Boost 1.50 COMPONENTS filesystem graph)
 \end{minted}
 \vfill
 If the library is not located in a system folder, often a hint can be provided:
 \begin{minted}{bash}
-cmake SOURCE_DIR -DBOOST_ROOT=/path/to/boost
+cmake /path/to/src/ -DBOOST_ROOT=/path/to/boost
 \end{minted}
 \end{frame}
 
@@ -395,7 +406,7 @@ add_subdirectory(tests)
 \end{minted}
 \end{frame}
 
-\section{How to organize a large project}
+\section{Tip: how to organize a large project}
 \begin{frame}[fragile, focus]
 \Large
 \begin{columns}[t]
